--- a/nginx.conf
+++ b/nginx.conf
@@ -7,10 +7,10 @@ http {
         server {
               listen 5000;
               location /api/v1/account/ {
-                proxy_pass http://accounts:8080/api/v1/account;
+                proxy_pass http://accounts:8080/api/v1/account/;
               }
               location /api/v1/transaction/ {
-                proxy_pass http://transactions:8081/api/v1/transaction;
+                proxy_pass http://transactions:8081/api/v1/transaction/;
               }
         }
 }
