--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ http {
         server {
               listen 5000;
               location /api/v1/account/ {
-                proxy_pass http://accounts:8080/api/v1/account/7;
+                proxy_pass http://accounts:8080/api/v1/account/;
               }
               location /api/v1/transaction/ {
                 proxy_pass http://transactions:8081/api/v1/transaction/;
