--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,13 @@
-user nginx;
 
-events {
-    worker_connections   1000;
-}
-http {
-        server {
-              listen 5000;
-              location /api/v1/account/ {
-                proxy_pass http://accounts:8080/api/v1/account/;
-              }
-              location /api/v1/transaction/ {
-                proxy_pass http://transactions:8081/api/v1/transaction/;
-              }
-        }
+server {
+  listen 5000;
+  location /api/v1/customer/ {
+    proxy_pass http://accounts:${CUSTOMER_SERVICE_PORT}/api/v1/customer/;
+  }
+  location /api/v1/account/ {
+    proxy_pass http://accounts:${ACCOUNT_SERVICE_PORT}/api/v1/account/;
+  }
+  location /api/v1/transaction/ {
+    proxy_pass http://transactions:${TRANSACTION_SERVICE_PORT}/api/v1/transaction/;
+  }
 }
