--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@
 server {
   listen 5000;
   location /api/v1/customer/ {
-    proxy_pass http://accounts:${CUSTOMER_SERVICE_PORT}/api/v1/customer/;
+    proxy_pass http://customers:${CUSTOMER_SERVICE_PORT}/api/v1/customer/;
   }
   location /api/v1/account/ {
     proxy_pass http://accounts:${ACCOUNT_SERVICE_PORT}/api/v1/account/;
