Last build fixes

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
 	<name>Main module</name>
 	<properties>
 		<java.version>8</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
 	<modules>
 		<module>CA-BH-Common</module>
